--- a/AppServSalud/src/main/resources/templates/fragments/head.html
+++ b/AppServSalud/src/main/resources/templates/fragments/head.html
@@ -5,10 +5,6 @@
     name="logoHouse.ico"
     content="width=device-width, initial-scale=1.0"
   >
-  <link 
-      rel="stylesheet" 
-      th:href="@{/styles/perfil.css}"
-  >
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -20,15 +16,30 @@
     th:href="@{/styles/index.css}"
   >
   <link
-          rel="stylesheet"
-          th:href="@{/styles/footer.css}"
+    rel="stylesheet"
+    th:href="@{/styles/footer.css}"
   >
-  <link rel="stylesheet"
-        th:href="@{/styles/calificacionProfesional.css}">
   <link
-          rel="stylesheet"
-          th:href="@{/styles/especialidades.css}"
+    rel="stylesheet"
+    th:href="@{/styles/calificacionProfesional.css}"
   >
-  <link rel="stylesheet" th:href="@{/styles/motorBusqueda.css}">
-  <script src="https://kit.fontawesome.com/6959f9ca80.js" crossorigin="anonymous"></script>
+  <link
+    rel="stylesheet"
+    th:href="@{/styles/especialidades.css}"
+  >
+  <link
+    rel="stylesheet"
+    th:href="@{/styles/motorBusqueda.css}"
+  >
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,400;1,900&display=swap');
+
+    * {
+      font-family: 'Roboto', sans-serif;
+    }
+  </style>
+  <script
+    src="https://kit.fontawesome.com/6959f9ca80.js"
+    crossorigin="anonymous"
+  ></script>
 </head>
