--- a/AppServSalud/src/main/resources/templates/tarjetaProfesional.html
+++ b/AppServSalud/src/main/resources/templates/tarjetaProfesional.html
@@ -1,8 +1,26 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaft.org" xmlns="http://www.w3.org/1999/html">
 
-<head th:replace="/fragments/head :: head">
+<head th:replace="/fragments/head :: head"></head>
+
+<head>
     <link rel="stylesheet" th:href="@{/styles/especialidades.css}">
+
+    <style>
+        #spinner {
+            width: 100vw;
+            height: 100vh;
+            background-color: rgba(0, 0, 0, 0.5);
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 10000000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -78,8 +96,7 @@
                 </div>
             </div>
             <div class="modal fade modal-general" th:id="'modal-'+${profesional.id}" tabindex="-1"
-                th:if="${session.usuario != null}"
-                aria-labelledby="modalIniciarSesionLabel" aria-hidden="true">
+                th:if="${session.usuario != null}" aria-labelledby="modalIniciarSesionLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-scrollable">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -91,13 +108,12 @@
                                 th:if="${oferta.profesional.id} == ${profesional.id}">
                                 <div class="card-body personalizado">
 
-                                    <h5 class="card-title"
-                                        >Doctor/ra:</h5>
+                                    <h5 class="card-title">Doctor/ra:</h5>
                                     <h5 class="card-title"
                                         th:text="${oferta.profesional.nombre}+' '+${oferta.profesional.apellido}"></h5>
-                                        <p class="card-text">Dia:
-                                            <span th:text="${oferta.fecha}"></span>
-                                        </p>
+                                    <p class="card-text">Dia:
+                                        <span th:text="${oferta.fecha}"></span>
+                                    </p>
                                     <p class="card-text">Horario:
                                         <span th:text="${oferta.horario}"></span>
                                     </p>
@@ -107,7 +123,7 @@
                                     <p class="card-text" th:if="${oferta.tipo == PRESENCIAL}"> Ubicacion:
                                         <span th:text="${oferta.ubicacion}"></span>
                                     </p>
-                                    
+
                                     <p class="card-text">Precio:
                                         <span th:text="${oferta.precio}"></span>
                                     </p>
@@ -117,9 +133,10 @@
                                     <form th:if="${!oferta.reservado}" th:action="@{/oferta/reservar}" method="post">
                                         <input type="hidden" th:value="${session.usuario.id}" name="idPaciente">
                                         <input type="hidden" th:value="${oferta.id}" name="idOferta">
-                                        <input type="submit" value="Reservar" class="btn btn-primary">
-                                    </form> 
-                                    <button disabled th:if="${oferta.reservado}" class="btn btn-secondary">Reservado</button>
+                                        <input type="submit" value="Reservar" class="btn btn-primary reservar">
+                                    </form>
+                                    <button disabled th:if="${oferta.reservado}"
+                                        class="btn btn-secondary">Reservado</button>
                                 </div>
                             </div>
                         </div>
@@ -129,26 +146,32 @@
         </div>
 
         <!-- Modal para iniciar sesión -->
-        <div class="modal fade" id="modalIniciarSesion" tabindex="-1" aria-labelledby="modalIniciarSesionLabel" aria-hidden="true">
+        <div class="modal fade" id="modalIniciarSesion" tabindex="-1" aria-labelledby="modalIniciarSesionLabel"
+            aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">Debes Iniciar Sesion Para acceder al turno</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body" >
+                    <div class="modal-body">
                         <div class="d-grid gap-2">
                             <a th:href="@{/login}" class="btn btn-primary">login</a>
                         </div>
                         <br>
-                        <span>En caso de que no tengas cuenta deberas registrarte , lo puedes hacer desde  <strong>
-                            <a href="/paciente/registro">AQUI!</a></strong></span>
+                        <span>En caso de que no tengas cuenta deberas registrarte , lo puedes hacer desde <strong>
+                                <a href="/paciente/registro">AQUI!</a></strong></span>
                     </div>
                 </div>
             </div>
         </div>
 
 
+    </div>
+    <div id="spinner">
+        <div class="spinner-border" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
     </div>
 
 
@@ -166,7 +189,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
+    <script>
+        var elements = document.getElementsByClassName("reservar");
+        var elementsArray = Array.from(elements);
 
+        elementsArray.forEach(element => {
+            element.addEventListener("click", function () {
+                document.getElementById("spinner").style.display = "flex";
+            });
+        });
+
+    </script>
 
 </body>
 
